...
                  // necessary to avoid Exception
                  child: Column(
                    children: [
                      Expanded(
                        flex: 6, // controls the height ratio
                        child: TextField(
                          key: const Key('playlistUrlTextField'),
                          controller: _playlistUrlController,
                          style: const TextStyle(fontSize: 15),
                          decoration: InputDecoration(
                            labelText: AppLocalizations.of(context)!
                                .ytPlaylistLinkLabel,
                            hintText: AppLocalizations.of(context)!
...
                          maxLines: 1,
                        ),
                      ),
                      Expanded(
                        flex: 4, // controls the height ratio
                        child: TextField(
                          key: const Key('selectedPlaylistTextField'),
                          readOnly: true,
                          controller: TextEditingController(
                            text: Provider.of<PlaylistListVM>(context)
                                    .uniqueSelectedPlaylist
                                    ?.title ??
                                '',
...
                SizedBox(
                  width: kSmallButtonWidth,
                  child: Tooltip(
                    message:
                        AppLocalizations.of(context)!.addPlaylistButtonTooltip,
                    child: ElevatedButton(
                      key: const Key('addPlaylistButton'),
                      style: ButtonStyle(
                        shape: widget.appElevatedButtonRoundedShape,
                        padding: MaterialStateProperty.all<EdgeInsetsGeometry>(
                          const EdgeInsets.symmetric(
                              horizontal: kSmallButtonInsidePadding),
                        ),
...
              SizedBox(
                width: 75,
                child: Tooltip(
                  message:
                      AppLocalizations.of(context)!.playlistToggleButtonTooltip,
                  child: ElevatedButton(
                    key: const Key('playlist_toggle_button'),
                    style: ButtonStyle(
                      shape: widget.appElevatedButtonRoundedShape,
                      padding: MaterialStateProperty.all<EdgeInsetsGeometry>(
                        const EdgeInsets.symmetric(
                            horizontal: kSmallButtonInsidePadding),
                      ),
...
